<resources>
    <string name="app_name">WeatherApp</string>
    <string name="temperature">21C</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="date">12 Dec 2017</string>
    <string name="lacation_hint">Write the city name...</string>
    <string name="forecast">Daily Forecast</string>
    <string name="arduino">Current arduino data</string>
    <string name="temperature_arduino">Temperature</string>
    <string name="hymidity_arduino">Humidity</string>
    <string name="humidity">70%</string>
    <string name="nothing">---</string>
</resources>
