<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marta.weatherapp.MainActivity"
    android:background="@drawable/blue_background"
    android:scaleType="fitXY">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lacation_hint"
            android:inputType="textCapSentences"
            android:textSize="25sp"
            android:textColor="@color/text_color"
            android:background="#00000000"
            android:gravity="center"
            android:layout_marginTop="16dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="233.33dp"
                android:layout_height="160dp"
                android:src="@drawable/na"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/temperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/temperature"
                    style="@style/text_style"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_upward_white_24dp"/>

                    <TextView
                        android:id="@+id/temperatureHighTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        style="@style/text_style"
                        android:textSize="15sp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_downward_white_24dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/temperatureLowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        style="@style/text_style"
                        android:textSize="15sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/conditionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    style="@style/text_style"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    style="@style/text_style"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_arduino_data_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arduino"
                style="@style/text_style"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/transparent_color">

                    <TextView
                        android:id="@+id/arduino_temp_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_style"
                        android:layout_gravity="center"
                        android:text="@string/temperature_arduino"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/arduino_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_style"
                        android:layout_gravity="center"
                        android:text="@string/temperature"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent_color">

                    <TextView
                        android:id="@+id/arduino_hum_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_style"
                        android:layout_gravity="center"
                        android:text="@string/hymidity_arduino"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/arduino_hum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/text_style"
                        android:layout_gravity="center"
                        android:text="@string/humidity"
                        android:textSize="25sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/dailyForecastTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forecast"
            style="@style/text_style"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/transparent_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/weatherForecastIconImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/na" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateForecastTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    style="@style/text_style"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_upward_white_24dp"/>

                    <TextView
                        android:id="@+id/temperatureHighForecastTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        style="@style/text_style"
                        android:textSize="25sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_downward_white_24dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:id="@+id/temperatureLowForecastTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temperature"
                        style="@style/text_style"
                        android:textSize="25sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/conditionForecastTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condition"
                    style="@style/text_style"
                    android:textSize="15sp"/>

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yahoo_logo_white"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>

